# plissken

./: .gitignore  Cargo.toml  README.md  install.sh  mkdocs.yml  plissken.toml
.angreal/: task_functional.py  task_setup.py  task_static_analysis.py  task_unit_tests.py
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yml  release.yml
.metis/: code-index-hashes.json  code-index-symbols.json  code-index.md  config.toml  vision.md
crates/plissken-cli/: Cargo.toml
crates/plissken-cli/src/: main.rs
crates/plissken-cli/tests/: integration_test.rs
crates/plissken-core/: Cargo.toml
crates/plissken-core/src/: config.rs  crossref.rs  discover.rs  docstring.rs  error.rs  lib.rs  manifest.rs  model.rs  test_fixtures.rs
crates/plissken-core/src/parser/: mod.rs  python.rs  rust.rs  traits.rs
crates/plissken-core/src/render/: crossref_renderer.rs  docstring_renderer.rs  mod.rs  module_renderer.rs  renderer.rs  templates.rs  theme.rs
crates/plissken-core/src/render/module/: crossref.rs  layout.rs  mod.rs
crates/plissken-core/src/render/snapshots/: plissken_core__render__module_renderer__snapshot_tests__complex_python_module.snap  plissken_core__render__module_renderer__snapshot_tests__complex_rust_module.snap  plissken_core__render__module_renderer__snapshot_tests__python_async_function.snap  plissken_core__render__module_renderer__snapshot_tests__python_class_with_methods.snap  plissken_core__render__module_renderer__snapshot_tests__python_enum_class.snap  plissken_core__render__module_renderer__snapshot_tests__python_module_simple.snap  plissken_core__render__module_renderer__snapshot_tests__python_module_variables.snap  plissken_core__render__module_renderer__snapshot_tests__python_module_with_function.snap  plissken_core__render__module_renderer__snapshot_tests__python_pyo3_binding.snap  plissken_core__render__module_renderer__snapshot_tests__rust_async_unsafe_function.snap  plissken_core__render__module_renderer__snapshot_tests__rust_enum_with_variants.snap  plissken_core__render__module_renderer__snapshot_tests__rust_function_with_generics.snap  plissken_core__render__module_renderer__snapshot_tests__rust_module_simple.snap  plissken_core__render__module_renderer__snapshot_tests__rust_pyclass_struct.snap  plissken_core__render__module_renderer__snapshot_tests__rust_pyfunction.snap  plissken_core__render__module_renderer__snapshot_tests__rust_struct_with_fields.snap
crates/plissken-core/src/render/ssg/: mdbook.rs  mkdocs.rs  mod.rs  traits.rs
crates/plissken-core/templates/: module.html
crates/plissken-core/templates/partials/: badge.html  code_block.html  signature.html
docs/: index.md
docs/api/: _nav.yml
docs/explanation/: architecture.md  cross-references.md  parsing.md  theme-system.md
(+206 files in other folders)
