[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Dylan Storey <dylan.storey@gmail.com>"]
repository = "https://github.com/colliery-io/plissken"
homepage = "https://github.com/colliery-io/plissken"
documentation = "https://docs.rs/plissken"
keywords = ["documentation", "pyo3", "maturin", "rust", "python"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Parsing
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"

# Templating
tera = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Filesystem
walkdir = "2"

# Internal crates
plissken-core = { path = "crates/plissken-core" }
