[package]
name = "plissken"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Documentation generator for Rust-Python hybrid projects using PyO3 and maturin"
readme = "../../README.md"

[[bin]]
name = "plissken"
path = "src/main.rs"

[dependencies]
plissken-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
