[package]
name = "plissken-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for plissken - documentation generator for Rust-Python hybrid projects"
readme = "../../README.md"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tera = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"
insta = { version = "1.34", features = ["yaml"] }
